# sys-overseer

./: Cargo.toml  Cross.toml  README.md  buil.sh
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/sys/: mod.rs  network_stats.rs  sys_monitor.rs
src/ui/: layout.rs  widgets.rs
